# VideoGenerationWorkflows

./: .gitignore  README.md  pyproject.toml  requirements.txt
demos/generate_video_from_image/: README.md  generate_video.py
demos/generate_video_from_last_frame_chain/: README.md  generate_video.py
demos/generate_video_from_prompt/: README.md  generate_video.py
demos/generate_video_from_start_end_images/: README.md  generate_video.py
demos/veo/: generate_video.py
product/: customer-profile.md  project-proposal.md  viral-works-template.md
prompts/: prompt_template.py  rainy_valley_prompt.py
research/: video_generation_models.md
scripts/: generate_background_video.py  generate_coffee_shop_video.py  generate_italian_piazza_video.py  generate_rainy_valley_video.py
src/video_generation_workflows/: __init__.py
src/video_generation_workflows/video/: __init__.py  background_video_generator.py  video_configuration.py  video_generator.py  video_segment_manager.py
